Added Integrations page

--- a/home_page.html
+++ b/home_page.html
@@ -102,11 +102,23 @@
                 <span class="bene-light-header">Active Benefactory Campaigns</span>
                 <div class="activecampaigns">
                     <div class="gridviewmedium">
-                        <div class="gridviewimg"></div>
+                        <div class="gridviewimg">
+                            <img src="Assets/amazon-brazil-fire.jpg">
+                        </div>
                         <div class="gridviewcontent">
                             <div class="bene-body-subtitle">Amazon Forest Fires</div>
-                            <br />
-                            <div class="bene-body-base-medium">In the past 48 hours, 2000 new fires have started in the
+                            <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
+                                Amazon despite the President’s ban on deliberate burning.</div>
+                        </div>
+                    </div>
+
+                    <div class="gridviewmedium">
+                        <div class="gridviewimg">
+                            <img src="Assets/campaign-pic-2.jpeg">
+                        </div>
+                        <div class="gridviewcontent">
+                            <div class="bene-body-subtitle">India Flood Relief</div>
+                            <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
                     </div>
