done for the day with fix

--- a/integrations_page.html
+++ b/integrations_page.html
@@ -140,37 +140,37 @@
                         <span class="bene-light-header">Choose your platform</span>
                         <br><br>
 
-                        < </div> <br><br>
+                    </div> <br><br>
 
-                    </div>
-                    <div>
-                        <input id="editButton" class="inputbutton" type="button" value="EDIT INFO" />
-                    </div>
+                </div>
+                <div>
+                    <input id="editButton" class="inputbutton" type="button" value="EDIT INFO" />
                 </div>
             </div>
         </div>
+    </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script type="text/javascript">
-            $(document).ready(() => {
-                $("#editButton").click(() => {
-                    $("#editModal").fadeIn(150);
-                });
-                $("#edit-modal-close").click(() => {
-                    $("#editModal").fadeOut(150);
-                });
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(() => {
+            $("#editButton").click(() => {
+                $("#editModal").fadeIn(150);
             });
-        </script>
+            $("#edit-modal-close").click(() => {
+                $("#editModal").fadeOut(150);
+            });
+        });
+    </script>
 
-        <script>
-            function openNav() {
-                document.getElementById("navBar").style.width = "300px";
-            }
+    <script>
+        function openNav() {
+            document.getElementById("navBar").style.width = "300px";
+        }
 
-            // function closeNav() {
-            //     document.getElementById("mySidenav").style.width = "0";
-            // }
-        </script>
+        // function closeNav() {
+        //     document.getElementById("mySidenav").style.width = "0";
+        // }
+    </script>
 </body>
 
 </html>
