--- a/home_page.html
+++ b/home_page.html
@@ -46,8 +46,9 @@
                     <div>
                         <img src="Assets/status_pass.svg" height="25px" />
                         <div>
-                            <span class="bene-body-subtitle">Account Registered</span>
+                            <span class="bene-body-title">Account Registered</span>
                         </div>
+
                         <div>
                             <span class="bene-body-base-medium">
                                 You've sucessfully created a charity account.
@@ -57,7 +58,7 @@
                     <div>
                         <img src="Assets/status_warning.svg" height="25px" />
                         <div>
-                            <span class="bene-body-subtitle">Integration Pending</span>
+                            <span class="bene-body-title">Integration Pending</span>
                         </div>
                         <div>
                             <span class="bene-body-base-medium">
@@ -72,7 +73,7 @@
                     <div>
                         <img src="Assets/status_cross.svg" height="25px" />
                         <div>
-                            <span class="bene-body-subtitle">Can't accept payments</span>
+                            <span class="bene-body-title">Can't accept payments</span>
                         </div>
                         <div>
                             <span class="bene-body-base-medium">
@@ -89,7 +90,7 @@
                     <div class="listviewmedium">
                         <div class="listviewimg"></div>
                         <div class="listviewcontent">
-                            <div class="bene-body-subtitle">Amazon Forest Fires</div>
+                            <div class="bene-body-title">Amazon Forest Fires</div>
                             <br />
                             <div class="bene-label">AMOUNT RAISED</div>
                             <div class="bene-body-subtitle">$420,420</div>
@@ -106,7 +107,7 @@
                             <img src="Assets/amazon-brazil-fire.jpg">
                         </div>
                         <div class="gridviewcontent">
-                            <div class="bene-body-subtitle">Amazon Forest Fires</div>
+                            <div class="bene-body-title">Amazon Forest Fires</div>
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
@@ -117,7 +118,7 @@
                             <img src="Assets/campaign-pic-2.jpeg">
                         </div>
                         <div class="gridviewcontent">
-                            <div class="bene-body-subtitle">India Flood Relief</div>
+                            <div class="bene-body-title">India Flood Relief</div>
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
