--- a/profile_page.html
+++ b/profile_page.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <title>Profile | Charity Dashboard</title>
+    <title>Profile | Retailer Dashboard</title>
 
     <script>
         $(document).ready(function () {
