Added 'Past Campaigns'

--- a/home_page.html
+++ b/home_page.html
@@ -27,7 +27,7 @@
             <a href="profile_page.html">Profile</a>
             <a href="tranactions_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
-            <a href="campaigns_page.html">Past Campaigns</a>
+            <a href="past_campaigns.html">Past Campaigns</a>
             <a href="campaigns_page.html">Contribution Log</a>
             <a href="campaigns_page.html">Tramsfer Donations</a>
             <div class="navfooter">
