Added 'Transfer Donations'

--- a/help_page.html
+++ b/help_page.html
@@ -8,9 +8,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <link rel="stylesheet" type="text/css" href="charity_dashboard.css">
+    <link rel="stylesheet" type="text/css" href="retailer_dashboard.css">
 
-    <title>Help | Charity Dashboard</title>
+    <title>Help | Retailer Dashboard</title>
 
 
     <!-- <script>
@@ -86,13 +86,14 @@
 
                 <div>
                     <label>DESCRIBE YOUR PROBLEM HERE</label><br>
-                    <textarea class="inputtext" type="text" class="form-control" placeholder="" name="First_Name"></textarea>
+                    <textarea class="inputtext" type="text" class="form-control" placeholder=""
+                        name="First_Name"></textarea>
 
-                    
+
                     <br><br>
                     <input class="inputbutton-small" type="button" value="Get Help" /><br><br>
                 </div>
-                
+
 
 
             </div>
