--- a/home_page.html
+++ b/home_page.html
@@ -28,8 +28,8 @@
             <a href="tranactions_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
-            <a href="campaigns_page.html">Contribution Log</a>
-            <a href="campaigns_page.html">Tramsfer Donations</a>
+            <a href="contribution_log.html">Contribution Log</a>
+            <a href="transfer_donations.html">Transfer Donations</a>
             <div class="navfooter">
                 <a href="help_page.html">Help</a>
                 <a id="ared" href="">Logout</a>
