--- a/transfer_donations.html
+++ b/transfer_donations.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <title>Integrations | Charity Dashboard</title>
+    <title>Transfer Donations | Charity Dashboard</title>
 
     <script>
         $(document).ready(function () {
@@ -117,11 +117,11 @@
 
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a class="navbarselected" href="integrations_page.html">Integrations</a>
+            <a href="integrations_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
-            <a href="past_campaigns.html">Past Campaigns</a>
-            <a href="contribution_log.html">Contribution Log</a>
-            <a href="transfer_donations.html">Transfer Donations</a>
+            <a href="campaigns_page.html">Past Campaigns</a>
+            <a href="campaigns_page.html">Contribution Log</a>
+            <a class="navbarselected" href="campaigns_page.html">Transfer Donations</a>
             <div class="navfooter">
                 <a href="help_page.html">Help</a>
                 <a id="ared" href="#">Logout</a>
