--- a/contribution_log.html
+++ b/contribution_log.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <title>Past Campaigns | Retailer Dashboard</title>
+    <title>Contribution Log | Retailer Dashboard</title>
 
     <script>
         $(document).ready(function () {
@@ -26,11 +26,11 @@
 
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a href="tranactions_page.html">Integrations</a>
+            <a href="integrations_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
-            <a class="navbarselected" href="past_campaigns.html">Past Campaigns</a>
-            <a href="contribution_log.html">Contribution Log</a>
-            <a href="campaigns_page.html">Transfer Donations</a>
+            <a href="past_campaigns.html">Past Campaigns</a>
+            <a class="navbarselected" href="contribution_log.html">Contribution Log</a>
+            <a href="transfer_donations.html">Transfer Donations</a>
             <div class="navfooter">
                 <a href="help_page.html">Help</a>
                 <a id="ared" href="#">Logout</a>
@@ -43,21 +43,21 @@
                 <img class="header_title" src="Assets/transaction_header.svg" height="31px">
             </div>
             <div class="workspacecontent">
-                <span class="bene-light-header">Your Past Campaigns</span>
+                <span class="bene-light-header">Your Contribution Log</span>
 
                 <div class="transactionstable">
                     <div class="transactionstablehead">
                         <div class="tableidname">
-                            <span>CAMPAIGN TITLE</span>
+                            <span>NAME</span>
                         </div>
                         <div class="tablepay">
                             <span>DATE</span>
                         </div>
                         <div class="tableno">
-                            <span>NON-PROFIT</span>
+                            <span>E-MAIL</span>
                         </div>
                         <div class="tableemail">
-                            <span>TOTAL CONTRIBUTED</span>
+                            <span>AMOUNT</span>
                         </div>
 
                     </div>
@@ -66,13 +66,13 @@
 
                     <div class="transactionstablecard">
                         <div class="tableidname">
-                            <span>California Wildfires</span>
+                            <span>Umair Thakur</span>
                         </div>
                         <div class="tablepay">
                             <span>9-7-19</span>
                         </div>
                         <div class="tableno">
-                            <span>World Vision</span>
+                            <span>umair@volvmedia.com</span>
                         </div>
                         <div class="tableemail">
                             <span>$16,420</span>
@@ -82,13 +82,13 @@
 
                     <div class="transactionstablecard">
                         <div class="tableidname">
-                            <span>Kerala Floods</span>
+                            <span>Shekar Mudaliyar</span>
                         </div>
                         <div class="tablepay">
                             <span>9-7-19</span>
                         </div>
                         <div class="tableno">
-                            <span>World Vision</span>
+                            <span>shekar@gmail.com</span>
                         </div>
                         <div class="tableemail">
                             <span>$16,420</span>
@@ -97,13 +97,13 @@
 
                     <div class="transactionstablecard">
                         <div class="tableidname">
-                            <span>Clean Drinking Water</span>
+                            <span>Mayur P</span>
                         </div>
                         <div class="tablepay">
                             <span>9-7-19</span>
                         </div>
                         <div class="tableno">
-                            <span>World Vision</span>
+                            <span>mayur@volvmedia.com</span>
                         </div>
                         <div class="tableemail">
                             <span>$16,420</span>
