Added 'Current Campaign'

--- a/past_campaigns.html
+++ b/past_campaigns.html
@@ -26,7 +26,7 @@
 
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a href="tranactions_page.html">Integrations</a>
+            <a href="integrations_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
             <a class="navbarselected" href="past_campaigns.html">Past Campaigns</a>
             <a href="contribution_log.html">Contribution Log</a>
