--- a/transfer_donations.html
+++ b/transfer_donations.html
@@ -103,7 +103,7 @@
                     </div>
 
                 </div>
-                <br><br><br><br><br>
+
 
             </div>
 
@@ -119,8 +119,8 @@
             <a href="profile_page.html">Profile</a>
             <a href="integrations_page.html">Integrations</a>
             <a href="campaigns_page.html">Current Campaign</a>
-            <a href="campaigns_page.html">Past Campaigns</a>
-            <a href="campaigns_page.html">Contribution Log</a>
+            <a href="past_campaigns.html">Past Campaigns</a>
+            <a href="contribution_log.html">Contribution Log</a>
             <a class="navbarselected" href="campaigns_page.html">Transfer Donations</a>
             <div class="navfooter">
                 <a href="help_page.html">Help</a>
