--- a/current_campaign.html
+++ b/current_campaign.html
@@ -23,10 +23,10 @@
 
             <img src="Assets/ACT NOW - Benefactory.png" height="50px" />
 
-            <a class="navbarselected" href="home_page.html">Home</a>
+            <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
             <a href="tranactions_page.html">Integrations</a>
-            <a href="current_campaign.html">Current Campaign</a>
+            <a class="navbarselected" href="campaigns_page.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
             <a href="contribution_log.html">Contribution Log</a>
             <a href="transfer_donations.html">Transfer Donations</a>
@@ -41,68 +41,11 @@
                 <img class="header_title" src="Assets/home_header.svg" height="31px" />
             </div>
             <div class="workspacecontent">
-                <span class="bene-light-header">Your Account Status</span>
-                <div class="accountstatus">
-                    <div>
-                        <img src="Assets/status_pass.svg" height="25px" />
-                        <div>
-                            <span class="bene-body-title">Account Registered</span>
-                        </div>
 
-                        <div>
-                            <span class="bene-body-base-medium">
-                                You've sucessfully created a charity account.
-                            </span>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="Assets/status_warning.svg" height="25px" />
-                        <div>
-                            <span class="bene-body-title">Integration Pending</span>
-                        </div>
-                        <div>
-                            <span class="bene-body-base-medium">
-                                You've sucessfully created a charity account.
-                            </span>
-                        </div>
-                        <br />
-                        <div>
-                            <input id="editButton" class="inputbutton-tertiary" type="button" value="Edit Info" />
-                        </div>
-                    </div>
-                    <div>
-                        <img src="Assets/status_cross.svg" height="25px" />
-                        <div>
-                            <span class="bene-body-title">Can't accept payments</span>
-                        </div>
-                        <div>
-                            <span class="bene-body-base-medium">
-                                You've sucessfully created a charity account.
-                            </span>
-                        </div>
-                    </div>
-                </div>
 
-                <br /><br /><br /><br />
-
-                <span class="bene-light-header">Your Active Campaign</span>
+                <span class="bene-light-header">Choose a Campaign</span>
                 <div class="activecampaigns">
-                    <div class="listviewmedium">
-                        <div class="listviewimg"></div>
-                        <div class="listviewcontent">
-                            <div class="bene-body-title">Amazon Forest Fires</div>
-                            <br />
-                            <div class="bene-label">AMOUNT RAISED</div>
-                            <div class="bene-body-subtitle">$420,420</div>
-                        </div>
-                    </div>
-                </div>
-
-                <br /><br /><br /><br />
-
-                <span class="bene-light-header">Active Benefactory Campaigns</span>
-                <div class="activecampaigns">
-                    <div class="gridviewmedium">
+                    <a href="" class="gridviewmedium">
                         <div class="gridviewimg">
                             <img src="Assets/amazon-brazil-fire.jpg">
                         </div>
@@ -111,9 +54,9 @@
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="gridviewmedium">
+                    <a href="" class="gridviewmedium">
                         <div class="gridviewimg">
                             <img src="Assets/campaign-pic-2.jpeg">
                         </div>
@@ -122,7 +65,7 @@
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
