Added 'Choose Campaigns'

--- a/campaigns_details_page.html
+++ b/campaigns_details_page.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <link rel="stylesheet" type="text/css" href="charity_dashboard.css">
+    <link rel="stylesheet" type="text/css" href="retailer_dashboard.css">
 
     <title>Clean Drinking | Charity Dashboard</title>
 
