--- a/campaigns_page.html
+++ b/campaigns_page.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="icon" href="Assets/ACT_NOW_Logo_(Med).png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" type="text/css" href="charity_dashboard.css">
+    <link rel="stylesheet" type="text/css" href="retailer_dashboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
@@ -105,13 +105,13 @@
         </div>
         <<<<<<< HEAD </body> </html>======= </div> <script>
             function openNav() {
-            document.getElementById("navBar").style.width = "300px";
+                document.getElementById("navBar").style.width = "300px";
             }
 
             // function closeNav() {
             // document.getElementById("mySidenav").style.width = "0";
             // }
-            </script>
+        </script>
 </body>
 
 </html>
