--- a/current_campaign.html
+++ b/current_campaign.html
@@ -45,7 +45,7 @@
 
                 <span class="bene-light-header">Choose a Campaign</span>
                 <div class="activecampaigns">
-                    <a href="" class="gridviewmedium">
+                    <a href="choose_campaign.html" class="gridviewmedium">
                         <div class="gridviewimg">
                             <img src="Assets/amazon-brazil-fire.jpg">
                         </div>
