--- a/transfer_donations.html
+++ b/transfer_donations.html
@@ -118,7 +118,7 @@
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
             <a href="integrations_page.html">Integrations</a>
-            <a href="campaigns_page.html">Current Campaign</a>
+            <a href="current_campaign.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
             <a href="contribution_log.html">Contribution Log</a>
             <a class="navbarselected" href="campaigns_page.html">Transfer Donations</a>
