--- a/choose_campaign.html
+++ b/choose_campaign.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <title>Choose Campaign | Charity Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
+    <title>Choose Campaign | Retailer Dashboard</title>
 
     <script>
         $(document).ready(function () {
@@ -133,128 +135,84 @@
                 <img class="header_title" src="Assets/profile_header.svg" height="31px">
             </div>
             <div class="workspacecontent">
-                <div>
-                    <span class="bene-caps-small">CAMPAIGN TITLE</span><br>
-                </div>
-                <div>
-                    <span class="bene-light-header">Amazon Forest Fires</span>
-                </div>
+                <div class="choosecampaign">
 
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">CAMPAIGN BACKGROUND IMAGE</span><br>
-                </div>
-                <div>
-                    <div class="campaign-upload-image">
-                        <!-- <div>
-                                <a class="hyperlink-button-primary" href="">Upload Image </a><a class="hyperlink-button-secondary" href=""> Remove</a>
-                            </div> -->
-                    </div>
-                </div>
-
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">CAMPAIGN DESCRIPTION</span><br>
-                </div>
-
-                <div>
-                    <div class="editable-text-box">
-                        <div>
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Integer feugiat scelerisque varius morbi.
-                                Mattis nunc sed blandit libero volutpat sed cras. Sed egestas egestas fringilla
-                                phasellus. Nulla pharetra diam sit amet. Purus semper eget duis at tellus at urna
-                                condimentum. Et netus et malesuada fames ac turpis egestas. Leo urna molestie at
-                                elementum eu facilisis sed. Odio morbi quis commodo odio aenean sed adipiscing. Mi ipsum
-                                faucibus vitae aliquet nec ullamcorper sit amet. Vel elit scelerisque mauris
-                                pellentesque. Tortor at risus viverra adipiscing at. Purus non enim praesent elementum
-                                facilisis leo vel. Tortor id aliquet lectus proin nibh nisl. Id diam vel quam elementum
-                                pulvinar etiam non. Posuere ac ut consequat semper viverra nam libero. Curabitur vitae
-                                nunc sed velit dignissim sodales. Nulla facilisi cras fermentum odio eu feugiat pretium
-                                nibh ipsum. Elit duis tristique sollicitudin nibh sit. Sit amet consectetur adipiscing
-                                elit.
-                            </span>
-                        </div>
-
-                        <br>
-
-                        <div>
-                            <input id="editButton" class="inputbutton-tertiary" type="button" value="Edit" />
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">WIDGET TITLE</span><br>
-                </div>
-
-                <div>
-                    <div class="editable-text-box">
-                        <div>
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </span>
-                        </div>
-
-                        <br>
-
-                        <div>
-                            <input id="edit-button" class="inputbutton-tertiary" type="button" value="Edit" />
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">WIDGET INFORMATION BOX CONTENT</span><br>
-                </div>
-
-                <div>
-                    <div class="editable-text-box">
-                        <div>
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </span>
-                        </div>
-
-                        <br>
-
-                        <div>
-                            <input class="inputbutton-tertiary" type="button" value="Edit" />
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">TOTAL CONTRIBUTED</span><br>
-                </div>
-
-                <div>
                     <div>
-                        <span>
-                            $
-                        </span>
-                        <span class="bene-light-header">
-                            6,420
-                        </span>
+                        <span class="bene-caps-small">CAMPAIGN TITLE</span><br>
                     </div>
+                    <div>
+                        <span class="bene-light-header">Amazon Forest Fires</span>
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <span class="bene-caps-small">CAMPAIGN BACKGROUND IMAGE</span><br>
+                    </div>
+                    <div>
+                        <div class="campaign-upload-image">
+                            <!-- <div>
+                                            <a class="hyperlink-button-primary" href="">Upload Image </a><a class="hyperlink-button-secondary" href=""> Remove</a>
+                                        </div> -->
+                        </div>
+                    </div>
+
+                    <br><br>
+
+                    <div>
+                        <span class="bene-caps-small">CAMPAIGN DESCRIPTION</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">In the past 48 hours, 2000 new fires have started in the Amazon
+                            despite the President’s ban on deliberate burning.</span>
+                    </div>
+
+                    <br><br>
+
+                    <div>
+                        <span class="bene-caps-small">WIDGET TITLE</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">When Jair Bolsonaro – a climate change sceptic - got elected as
+                            Brazil’s President, he promised to roll back environmental and indigenous protections and
+                            open the Amazon rainforest to industry to boost the economy.
+
+                            <br><br>
+
+                            74,000 fires have been recorded this year in the rainforest, threatening its future, the
+                            billions of plants and animals, and possibly the entire planet’s health.
+
+                            <br><br>
+
+                            20% of the world’s oxygen is produced by the Amazon. If more of the Amazon is destroyed, it
+                            would not only stop producing this oxygen and supporting this wildlife, but it would create
+                            a feedback loop worsening climate change.</span>
+                    </div>
+
+                    <br><br>
+
+
+
+                    <div>
+                        <span class="bene-caps-small">TOTAL CONTRIBUTED</span><br>
+                    </div>
+
+                    <div>
+                        <div>
+                            <span>
+                                $
+                            </span>
+                            <span class="bene-light-header">
+                                6,420
+                            </span>
+                        </div>
+                    </div>
+
+
                 </div>
 
-                <br>
-
-                <div>
-                    <span class="bene-caps-small">BRAND PARTNERS</span><br>
-                </div>
 
 
             </div>
